--- a/iniciandoSpring/src/main/resources/messages.properties
+++ b/iniciandoSpring/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
-hola.tabla.id = ID
-hola.tabla.nombre = Name
-hola.tabla.email = Electronic mail
-hola.title = Welcome to the 2019@Authors Web!!!
-hola.numeroAutores = Hola {0}!
+tabla.id = ID
+tabla.nombre = Name
+tabla.email = Electronic mail
+
+autores.title = Welcome to the 2019@Authors Web!!!
+autores.numeroAutores = Hola {0}!
+
+coches.title = Welcome to the 2019@Cars Web!!!
